--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ text-decoration: none;
 h1 {
 font-size: 150%;
 font-weight: 800bold;
-text-shadow: #DDD 0px 1px 1px;
+text-shadow: #EEE 0px 1px 1px;
 margin-top: 0;
 margin-bottom: 0;
 padding-top: 0;
@@ -69,7 +69,7 @@ margin-top: -1em;
 }
 #header h1 {
 font-size: 200%;
-letter-spacing: 4px;
+letter-spacing: 1px;
 }
 
 #main-wrapper {
@@ -122,16 +122,12 @@ color: #888;
 font-size:90%;
 }
 
-
 .post {
-/*  position: absolute;*/
 text-align: justify;
 //background: #f00;
 }
 
-
 ul {
-/*list-style-type: none;*/
 padding-left: 30px;
 padding-top: 0px;
 padding-bottom: 0px;
@@ -146,7 +142,7 @@ list-style-type: circle
 
 
 a {
-color: #00A038; /*#258f04; //#005880;*/
+color: #00A038;
 text-decoration: none;
 outline: none;  
 //border-bottom: solid 1px #ddd;
